--- a/user-service/package.json
+++ b/user-service/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "amqplib": "^0.8.0",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.27.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.13"
   }
 }
