--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,9 @@
   "dependencies": {
     "amqplib": "^0.8.0",
     "express": "^4.17.1",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "nodemon": "^2.0.13"
