--- a/product-service/package.json
+++ b/product-service/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.13"
   }
 }
