--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-http-proxy": "^1.6.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.14"
