--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "camelcase-keys": "^7.0.1",
+    "chart.js": "^3.7.0",
     "formik": "^2.2.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
